create_user, change_pass, content_filter

--- a/gateway.yaml
+++ b/gateway.yaml
@@ -142,7 +142,7 @@ paths:
                 lastname: 
                   type: string
                   description: the lastname field for the user
-                birthdate:
+                dateofbirth:
                   type: string
                   description: the birthday field for the user
               required:
