--- a/gateway.yaml
+++ b/gateway.yaml
@@ -535,7 +535,7 @@ paths:
               schema:
                 type: object
                 properties:
-                  attachement:
+                  attachment:
                     type: string
                     format: binary
           description: The attachment
